WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314077
[MSE][Cocoa] spurious UpcomingPTSExpectation warnings from AVSampleBufferVideoRenderer on B-frame content
https://bugs.webkit.org/show_bug.cgi?id=314077
Summary
[MSE][Cocoa] spurious UpcomingPTSExpectation warnings from AVSampleBufferVide...
Jean-Yves Avenard [:jya]
Reported
2026-05-05 06:03:55 PDT
Seen when streaming twitch. Twitch appends media segments with a single video frame at a time, and plays with very short buffered ahead content. This causes the calculation of the expectMinimumUpcomingSampleBufferPresentationTime calculation to be incorrect and we see thousands of errors in the logs "UpcomingPTSExpectation is enabled, but enqueuePTS:X is smaller than expectedMinimumUpcomingPTS:Y"
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-05-05 06:04:01 PDT
<
rdar://problem/176260662
>
Jean-Yves Avenard [:jya]
Comment 2
2026-05-05 07:14:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64270
EWS
Comment 3
2026-05-06 20:56:36 PDT
Committed
312763@main
(62987e20ab97): <
https://commits.webkit.org/312763@main
> Reviewed commits have been landed. Closing PR #64270 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug